fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1528,8 +1528,7 @@ img {
 }
 
 .margin-boost {
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin-bottom: 6%;
 }
 
 .uppercase {
